--- a/TNT3/.classpath
+++ b/TNT3/.classpath
@@ -12,6 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
